--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "school-managment-system": {
+    "Angular2": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -24,9 +24,10 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+              "styles": [
+                "node_modules/primeicons/primeicons.css",
+                "src/styles.css"
+              ]
           },
           "configurations": {
             "production": {
@@ -34,7 +35,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -56,10 +57,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "school-managment-system:build:production"
+              "buildTarget": "Angular2:build:production"
             },
             "development": {
-              "buildTarget": "school-managment-system:build:development"
+              "buildTarget": "Angular2:build:development"
             }
           },
           "defaultConfiguration": "development"
