--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/forms": "^20.1.1",
     "@angular/platform-browser": "^20.1.1",
     "@angular/router": "^20.1.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@primeuix/themes": "^1.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
