--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@primeuix/themes": "^1.0.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "postcss": "^8.5.6",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
