--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "crypto-js": "^4.2.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "postcss": "^8.5.6",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
@@ -45,6 +47,7 @@
     "@angular/build": "^20.1.1",
     "@angular/cli": "^20.1.1",
     "@angular/compiler-cli": "^20.1.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
